--- a/public/cari.html
+++ b/public/cari.html
@@ -79,8 +79,8 @@
           </div>
           <div class="col-md-auto jumlah">
             <p>Jumlah Penumpang (optional)</p>
-            <div class="col-md-auto input-group justify-content-center">
-              <input type="number" class="input-text" placeholder="Jumlah Penumpang" id="JumlahPenumpang" value="0" />
+            <div class="col-md-auto input-group">
+              <input type="number" class="input-text" placeholder="Jumlah Penumpang" id="JumlahPenumpang" />
               <span class="input-group-text bg-white"><img src="image/fi_users.png" width="15px" alt="" /></span>
             </div>
           </div>
@@ -95,7 +95,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-11">
-            <div class="row justify-content-center" id="cars-container"></div>
+            <div class="row" id="cars-container"></div>
           </div>
         </div>
       </div>
