--- a/public/cari.html
+++ b/public/cari.html
@@ -94,8 +94,8 @@
     <section class="cars">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-lg-11">
-            <div class="row" id="cars-container"></div>
+          <div class="col-lg-10">
+            <div id="cars-container" class="row row-cols-1 row-cols-xs-1 row-cols-sm-1 row-cols-lg-3 row-cols-md-2 g-3 mb-5 mt-3"></div>
           </div>
         </div>
       </div>
